src/styles/scss/_items.scss
/* ... */
.its123-thumbs {

  border: 1px solid $item-border-color;
  border-radius: 4px;

  margin-bottom: 20px;
  padding: 10px;

  @include media-breakpoint-up(md) {
    margin-right: 20px;
    padding: 20px;
  }

  .its123-label {
    display: inline-block;
    vertical-align: middle;
    padding: 5px 6px;
  }

  .its123-thumbs-text {
    display: inline-block;
    vertical-align: top;
    width: 62%;
    padding-left: 10px;
  }
  .its123-thumb-icon {
    display: inline-block;
    width: 0.83em;
    height: 1em;
    font-size: 37px;
  }
  .its123-thumb-icon use {
    color: black;
    fill: white;
  }

  .its123-icon-thumb-down {
    -webkit-transform: rotateX(180deg) rotateY(180deg);
    -moz-transform: rotateX(180deg) rotateY(180deg);
    -ms-transform: rotateX(180deg) rotateY(180deg);
    -o-transform: rotateX(180deg) rotateY(180deg);
    transform: rotateX(180deg) rotateY(180deg);
  }
  .its123-thumb-icon:hover use {
    fill: #c1c1c1;
  }

  &.its123-error {
    border-color: $error-border-color;
    color: $error-text-color;
  }

  input[type="radio"] {
    display: none;
  }
  input[value="1"]:checked ~ label .its123-icon-thumb-down use,
  input[value="1"]:checked ~ label .its123-icon-thumb-down:hover use {
    fill: #d43a28;
  }
  input[value="3"]:checked ~ label .its123-icon-thumb-up use,
  input[value="3"]:checked ~ label .its123-icon-thumb-up:hover use {
    fill: #8fef42;
  }
  input[value="1"]:checked ~ .its123-thumbs-text {
    text-decoration: line-through;
  }
  input[value="3"]:checked ~ .its123-thumbs-text {
    font-weight: bold;
  }
}

// Multi image select
.its123-multi-image {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  align-content: flex-start;
  padding: 0px;

  .its123-option {
    flex-grow: 1;
    flex-basis: 45%;
    margin: 1.25%;
  }

  .its123-radio {
    display: none;
  }
  .its123-image-container {
    position: relative;
    display: inline-block;
  }
  .its123-image-description {
    word-break: break-word;
    text-align: center;
    font-weight: bold;
    color: #5a5a5a;
    padding-bottom: 5px;
    height: 45px;
  }
  .its123-label {
    position: absolute;
  }

  // Option buttons
  .its123-label-yes, .its123-label-no {
    font-size: 40px;
    background-color: rgba(255,255,255,0.5);
    padding: 10px;
    border-radius: 10px;
    border: 1px solid white;
    transition: font-size 0.1s, position 0.1s, height 0.1s;
  }
  .its123-label-yes:hover, .its123-label-no:hover {
    background-color: white;
  }
  .its123-label-yes {
    left: 3px;
    top: 52px;
    color: #17d417;
  }
  .its123-label-no {
    right: 3px;
    top: 52px;
    color: #f70303;
  }

  // State indicator
  .its123-option input[value="1"]:checked ~ .its123-image-container .its123-label-no,
  .its123-option input[value="3"]:checked ~ .its123-image-container .its123-label-yes {
    font-size: 250px;
    top: 130px;
    height: 100px;
    background: none;
    border: none;
    z-index: 2;
    pointer-events: none;
  }
  @include media-breakpoint-down(sm) {
    .its123-option {
      margin-top: 25px;
    }
    .its123-option input[value="1"]:checked ~ .its123-image-container .its123-label-no {
      font-size: 150px;
      top: 90px;
    }
    .its123-option input[value="3"]:checked ~ .its123-image-container .its123-label-yes {
      font-size: 150px;
      top: 85px;
    }
  }
}

// Typeahead item
.its123-item-typeahead {

  .its123-typeahead-list {
    border-radius: .3em;
    margin: .2em 0 0;
    background: hsla(0,0%,100%,1);
    background: linear-gradient(to bottom right, white, hsla(0,0%,100%,1));
    border: $item-border;
    box-shadow: .05em .2em .6em rgba(0,0,0,.2);
    text-shadow: none;
    position: absolute;
    z-index: 1;
    box-sizing: border-box;
    list-style: none;
    padding: 0;

    width: 100%; /* fallback */
    width: calc(100% - 51px);

    @include media-breakpoint-up(md) {
      width: 274px;
    }

    &:before {
      content: "";
      position: absolute;
      top: -.43em;
      left: 1em;
      width: 0;
      height: 0;
      padding: .4em;
      background: white;
      border: inherit;
      border-right: 0;
      border-bottom: 0;
      -webkit-transform: rotate(45deg);
      transform: rotate(45deg);
    }
    &:empty {
      display: none;
    }

    li {
      position: relative;
      padding: .2em .5em;
      cursor: pointer;

      &:hover, &.selected {
        background-color: hsl(200, 40%, 80%);
      }
    }

    mark {
      background-color: white;
      font-weight: bold;
    }
  }

  @supports (transform: scale(0)) {
    .its123-typeahead-list:empty {
      opacity: 0;
      transform: scale(0);
      display: block;
      transition-timing-function: ease;
    }
    .its123-typeahead-list {
      transition: .3s cubic-bezier(.4,.2,.5,1.4);
      transform-origin: 1.43em -.43em;
    }
  }
}

// Freetype item
.its123-item-freetype {
  @extend .its123-alternate-background;

  .its123-label {
    display: block;
    margin-bottom: 15px;
  }
  &.its123-error {
    border: 1px solid $error-border-color;
    border-radius: $border-radius;
  }
}


.its123-matrices-container {

  .its123-matrices-bg {
    display: inline-block;
    box-sizing: content-box;

    background-color: #0182A9;
    background-size: 490px;

    height: 78px;
    width: 98px;

    margin: 2px;
    display: inline-block;
    box-shadow: 1px 1px 1px 0px #464646;
    border: 2px solid #0182A9;
    border-radius: 10px;

    &.its123-matrices-qMark {
      background-color: white;
    }
  }
}
.its123-matrices-instruction {
  text-align: center;
  font-size: 18px;
  font-weight: bold;
  color: #464646;
}
/* ... */

